# ros-llm-robotics-assistant

./: .gitignore  LICENSE  README
src/llm_robotics_assistant/: package.xml  setup.cfg  setup.py
src/llm_robotics_assistant/llm_robotics_assistant/: llm_planner.py  openai_planner.py  safety.py  schemas.py
src/llm_robotics_assistant/llm_robotics_assistant/nodes/: dry_run_executor.py  llm_planner_node.py
src/llm_robotics_assistant/llm_robotics_assistant/nodes/mocks/: manip_node_mock.py  nav_node_mock.py  vision_node_mock.py
src/llm_robotics_assistant_interfaces/: CMakeLists.txt  package.xml
src/llm_robotics_assistant_interfaces/msg/: TaskPlan.msg
src/llm_robotics_assistant_interfaces/srv/: ExecuteAction.srv
